--- a/ssteammember/assets/css/ssteammember.css
+++ b/ssteammember/assets/css/ssteammember.css
@@ -1,6 +1,6 @@
 .team {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    margin: auto;
+    margin: 5px auto;
     text-align: center;
     font-family: arial;
     /*padding: 20px;*/
@@ -27,6 +27,7 @@
 
 .team .cover {
     height: 300px;
+    margin-bottom: 10px;
 }
 
 .ss_row .column .team .cover {
